--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://githost.com/camper/repo.git"
+    "url": "https://github.com/harshdeepkanhai/timestamp-project"
   },
   "keywords": [
     "node",
